--- a/pages/index.html
+++ b/pages/index.html
@@ -37,14 +37,14 @@
   </header>
   <main>
     <section class="hero">
-      <div class="slider__btn disabled" id="slide-to-left">
+      <div class="slider__btn disabled" id="slide-hero-to-left">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
             d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z"
             fill="#1E212C" />
         </svg>
       </div>
-      <div class="slider__btn" id="slide-to-right">
+      <div class="slider__btn" id="slide-hero-to-right">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
             d="M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z"
@@ -176,7 +176,8 @@
         <ul class="services__list">
           <li class="services__item">
             <a href="./interior-design.html">
-              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" class="item-icon">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="item-icon">
                 <path
                   d="M46.5938 25.4062C47.3704 25.4062 48 24.7766 48 24V13.5C48 12.7234 47.3704 12.0938 46.5938 12.0938C45.6135 12.0938 26.4628 12.0938 25.4062 12.0938V3C25.4062 2.22337 24.7766 1.59375 24 1.59375H9C8.22338 1.59375 7.59375 2.22337 7.59375 3V12.0938H1.40625C0.629625 12.0938 0 12.7234 0 13.5V24C0 24.7766 0.629625 25.4062 1.40625 25.4062H7.59375V33.0938H1.40625C0.629625 33.0938 0 33.7234 0 34.5V45C0 45.7766 0.629625 46.4062 1.40625 46.4062H46.5938C47.3704 46.4062 48 45.7766 48 45V34.5C48 33.7234 47.3704 33.0938 46.5938 33.0938H40.4062V25.4062H46.5938ZM45.1875 22.5938C43.683 22.5938 34.3936 22.5938 32.9062 22.5938V14.9062H45.1875V22.5938ZM30.0938 22.5938C28.6208 22.5938 19.3889 22.5938 17.9062 22.5938V14.9062H30.0938V22.5938ZM10.4062 4.40625H22.5938V12.0938C21.1208 12.0938 11.8889 12.0938 10.4062 12.0938V4.40625ZM2.8125 22.5938V14.9062H15.0938V22.5938C13.6058 22.5938 4.31672 22.5938 2.8125 22.5938ZM10.4062 25.4062H22.5938V33.0938C21.1208 33.0938 11.8889 33.0938 10.4062 33.0938V25.4062ZM2.8125 35.9062H15.0938V43.5938H2.8125V35.9062ZM17.9062 35.9062H30.0938V43.5938H17.9062V35.9062ZM45.1875 35.9062V43.5938H32.9062V35.9062H45.1875ZM37.5938 33.0938C36.1208 33.0938 26.8889 33.0938 25.4062 33.0938V25.4062H37.5938V33.0938Z"
                   fill="#FF5A30" />
@@ -189,7 +190,8 @@
           </li>
           <li class="services__item">
             <a href="./interior-design.html">
-              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" class="item-icon">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="item-icon">
                 <path
                   d="M42.375 2.90625C40.2971 2.90625 38.4788 4.03866 37.5049 5.71875H1.40625C0.629625 5.71875 0 6.34837 0 7.125V43.6875C0 44.4641 0.629625 45.0938 1.40625 45.0938H42.375C45.4766 45.0938 48 42.5704 48 39.4688V8.53125C48 5.42963 45.4766 2.90625 42.375 2.90625ZM42.375 42.2812C41.8249 42.2812 3.32409 42.2812 2.8125 42.2812V8.53125H36.75V39.4688C36.75 40.2454 37.3796 40.875 38.1562 40.875C38.9329 40.875 39.5625 40.2454 39.5625 39.4688C39.5625 37.9179 40.8242 36.6562 42.375 36.6562C43.9258 36.6562 45.1875 37.9179 45.1875 39.4688C45.1875 41.0196 43.9258 42.2812 42.375 42.2812ZM45.1875 34.5986C44.3597 34.1187 43.3988 33.8438 42.375 33.8438C41.3512 33.8438 40.3903 34.1187 39.5625 34.5986V8.53125C39.5625 6.98044 40.8242 5.71875 42.375 5.71875C43.9258 5.71875 45.1875 6.98044 45.1875 8.53125V34.5986Z"
                   fill="#FF5A30" />
@@ -206,7 +208,8 @@
           </li>
           <li class="services__item">
             <a href="./interior-design.html">
-              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" class="item-icon">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="item-icon">
                 <g clip-path="url(#clip0_1270_3714)">
                   <path
                     d="M9.9375 33.8438C7.61128 33.8438 5.71875 35.7363 5.71875 38.0625C5.71875 40.3887 7.61128 42.2812 9.9375 42.2812C12.2637 42.2812 14.1562 40.3887 14.1562 38.0625C14.1562 35.7363 12.2637 33.8438 9.9375 33.8438ZM9.9375 39.4688C9.16209 39.4688 8.53125 38.8379 8.53125 38.0625C8.53125 37.2871 9.16209 36.6562 9.9375 36.6562C10.7129 36.6562 11.3438 37.2871 11.3438 38.0625C11.3438 38.8379 10.7129 39.4688 9.9375 39.4688Z"
@@ -230,7 +233,8 @@
           </li>
           <li class="services__item">
             <a href="./interior-design.html">
-              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" class="item-icon">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="item-icon">
                 <path
                   d="M39.5625 4.21875C39.5625 1.89258 37.6699 0 35.3438 0H7.21875C4.89258 0 3 1.89258 3 4.21875V12.6562C3 14.9824 4.89258 16.875 7.21875 16.875H35.3438C37.6699 16.875 39.5625 14.9824 39.5625 12.6562V11.25H40.9688C41.744 11.25 42.375 11.881 42.375 12.6562V18.2812C42.375 19.0565 41.744 19.6875 40.9688 19.6875H24.0938C21.7676 19.6875 19.875 21.5801 19.875 23.9062V28.125H18.4688C17.692 28.125 17.0625 28.7545 17.0625 29.5312V35.0797L15.6562 40.7955C14.7418 44.4529 17.5052 48 21.2812 48C25.0591 48 27.8196 44.4492 26.9077 40.8007L25.5 35.0797V29.5312C25.5 28.7545 24.8705 28.125 24.0938 28.125H22.6875V23.9062C22.6875 23.131 23.3185 22.5 24.0938 22.5H40.9688C43.2949 22.5 45.1875 20.6074 45.1875 18.2812V12.6562C45.1875 10.3301 43.2949 8.4375 40.9688 8.4375H39.5625V4.21875ZM22.6875 30.9375V33.8438H19.875V30.9375H22.6875ZM21.2812 45.1875C19.344 45.1875 17.9117 43.3693 18.386 41.4727L19.571 36.6562H22.9915L24.1776 41.4778C24.6486 43.3612 23.2255 45.1875 21.2812 45.1875ZM7.21875 2.8125H35.3438C36.119 2.8125 36.75 3.44348 36.75 4.21875V5.625H32.5312C31.1646 5.625 29.417 6.13696 27.3933 6.72949C24.6599 7.53003 21.5621 8.4375 18.4688 8.4375C15.4534 8.4375 13.3275 7.55676 11.4518 6.78003C10.0177 6.18604 8.66345 5.625 7.21875 5.625H5.8125V4.21875C5.8125 3.44348 6.44348 2.8125 7.21875 2.8125ZM36.75 12.6562C36.75 13.4315 36.119 14.0625 35.3438 14.0625H7.21875C6.44348 14.0625 5.8125 13.4315 5.8125 12.6562V8.4375H7.21875C8.10388 8.4375 9.10657 8.85278 10.3755 9.3783C12.3885 10.2122 14.8938 11.25 18.4688 11.25C21.9657 11.25 25.4132 10.24 28.184 9.42883C29.9242 8.91907 31.5681 8.4375 32.5312 8.4375H36.75V12.6562Z"
                   fill="#FF5A30" />
@@ -246,6 +250,53 @@
         <div class="services__learn-more learn-more">
           <h3 class="learn-more__title title">Learn more about our services</h3>
           <a href="./services.html" class="btn l-btn">View services</a>
+        </div>
+      </div>
+    </section>
+    <section class="portfolio">
+      <div class="portfolio-container container">
+        <h2 class="portfolio__title title">Browse our selected projects
+          and learn more about our work</h2>
+        <div class="slider__btn disabled" id="slide-portfolio-to-left">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z"
+              fill="#1E212C" />
+          </svg>
+        </div>
+        <div class="slider__btn" id="slide-portfolio-to-right">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z"
+              fill="#1E212C" />
+          </svg>
+        </div>
+        <div class="portfolio__slider" id="portfolio__slider">
+          <div class="slider__slide" id="portfolio-slide-1">
+            <div class="content">
+              <h3 class="slide-title title">Red Finger Building</h3>
+              <p class="slide-subtitle subtitle">Business Centers</p>
+              <a href="" class="btn m-btn outline">View Project</a>
+            </div>
+          </div>
+          <div class="slider__slide" id="portfolio-slide-1">
+            <div class="content">
+              <h3 class="slide-title title">Cubes Building</h3>
+              <p class="slide-subtitle subtitle">Business Centers</p>
+              <a href="" class="btn m-btn outline">View Project</a>
+            </div>
+          </div>
+          <div class="slider__slide" id="portfolio-slide-1">
+            <div class="content">
+              <h3 class="slide-title title">The Pencil Building</h3>
+              <p class="slide-subtitle subtitle">Stores & Malls</p>
+              <a href="" class="btn m-btn outline">View Project</a>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio__learn-more learn-more">
+          <h3 class="learn-more__title title">Explore all our works</h3>
+          <a href="./portfolio.html" class="btn l-btn">View portfolio</a>
         </div>
       </div>
     </section>
