add portfolio slider scripts

--- a/pages/index.html
+++ b/pages/index.html
@@ -273,55 +273,57 @@
             </svg>
           </div>
         </div>
-        <div class="portfolio__slider" id="portfolio__slider">
-          <div class="slider__slide" id="portfolio-slide-1">
-            <img src="../assets/portfolio/red-finger-build.jpg" alt="Red Finger Building">
-            <div class="content">
-              <h3 class="slide-title title">Red Finger Building</h3>
-              <p class="slide-subtitle subtitle">Business Centers</p>
-              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
-            </div>
-          </div>
-          <div class="slider__slide" id="portfolio-slide-2">
-            <img src="../assets/portfolio/cubes-building.png" alt="Cubes Building">
-            <div class="content">
-              <h3 class="slide-title title">Cubes Building</h3>
-              <p class="slide-subtitle subtitle">Business Centers</p>
-              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
-            </div>
-          </div>
-          <div class="slider__slide" id="portfolio-slide-3">
-            <img src="../assets/portfolio/pencil-building.png" alt="The Pencil Building">
-            <div class="content">
-              <h3 class="slide-title title">The Pencil Building</h3>
-              <p class="slide-subtitle subtitle">Stores & Malls</p>
-              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
-            </div>
-          </div>
-          <div class="slider__slide" id="portfolio-slide-4">
-            <img src="../assets/portfolio/red-finger-build.jpg" alt="Red Finger Building">
-            <div class="content">
-              <h3 class="slide-title title">Red Finger Building</h3>
-              <p class="slide-subtitle subtitle">Business Centers</p>
-              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
-            </div>
-          </div>
-          <div class="slider__slide" id="portfolio-slide-5">
-            <img src="../assets/portfolio/cubes-building.png" alt="Cubes Building">
-            <div class="content">
-              <h3 class="slide-title title">Cubes Building</h3>
-              <p class="slide-subtitle subtitle">Business Centers</p>
-              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
-            </div>
-          </div>
-          <div class="slider__slide" id="portfolio-slide-6">
-            <img src="../assets/portfolio/pencil-building.png" alt="The Pencil Building">
-            <div class="content">
-              <h3 class="slide-title title">The Pencil Building</h3>
-              <p class="slide-subtitle subtitle">Stores & Malls</p>
-              <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
-            </div>
-          </div>
+        <div class="portfolio__slider">
+          <ul class="portfolio__slides" id="portfolio__slides">
+            <li class="slider__slide" id="portfolio-slide-1">
+              <img src="../assets/portfolio/red-finger-build.jpg" alt="Red Finger Building">
+              <div class="content">
+                <h3 class="slide-title title">Red Finger Building</h3>
+                <p class="slide-subtitle subtitle">Business Centers</p>
+                <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
+              </div>
+            </li>
+            <li class="slider__slide" id="portfolio-slide-2">
+              <img src="../assets/portfolio/cubes-building.png" alt="Cubes Building">
+              <div class="content">
+                <h3 class="slide-title title">Cubes Building</h3>
+                <p class="slide-subtitle subtitle">Business Centers</p>
+                <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
+              </div>
+            </li>
+            <li class="slider__slide" id="portfolio-slide-3">
+              <img src="../assets/portfolio/pencil-building.png" alt="The Pencil Building">
+              <div class="content">
+                <h3 class="slide-title title">The Pencil Building</h3>
+                <p class="slide-subtitle subtitle">Stores & Malls</p>
+                <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
+              </div>
+            </li>
+            <li class="slider__slide" id="portfolio-slide-4">
+              <img src="../assets/portfolio/red-finger-build.jpg" alt="Red Finger Building">
+              <div class="content">
+                <h3 class="slide-title title">Red Finger Building</h3>
+                <p class="slide-subtitle subtitle">Business Centers</p>
+                <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
+              </div>
+            </li>
+            <li class="slider__slide" id="portfolio-slide-5">
+              <img src="../assets/portfolio/cubes-building.png" alt="Cubes Building">
+              <div class="content">
+                <h3 class="slide-title title">Cubes Building</h3>
+                <p class="slide-subtitle subtitle">Business Centers</p>
+                <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
+              </div>
+            </li>
+            <li class="slider__slide" id="portfolio-slide-6">
+              <img src="../assets/portfolio/pencil-building.png" alt="The Pencil Building">
+              <div class="content">
+                <h3 class="slide-title title">The Pencil Building</h3>
+                <p class="slide-subtitle subtitle">Stores & Malls</p>
+                <a href="./project.html" class="slide-btn btn m-btn outline">View Project</a>
+              </div>
+            </li>
+          </ul>
         </div>
         <div class="portfolio__learn-more learn-more">
           <h3 class="learn-more__title title">Explore all our works</h3>
