--- a/pages/index.html
+++ b/pages/index.html
@@ -394,7 +394,7 @@
             </li>
           </ul>
           <div class="slider-btns">
-            <div class="slider__btn disabled" id="slide-portfolio-to-left">
+            <div class="slider__btn" id="slide-portfolio-to-left">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z"
@@ -410,6 +410,64 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="figures">
+      <div class="container-figures container">
+        <h2 class="figures-title title">Some facts and figures</h2>
+        <ul class="figures__list">
+          <li class="figures__item">
+            <div class="circle">
+              <svg xmlns="http://www.w3.org/2000/svg" width="148" height="148" viewBox="0 0 148 148" fill="none">
+                <circle opacity="0.3" cx="74" cy="74" r="71" stroke="#F89828" stroke-width="6" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="148" height="148" viewBox="0 0 148 148" fill="none">
+                <path
+                  d="M74 142C111.555 142 142 111.555 142 74C142 36.4446 111.555 6 74 6V0C114.869 0 148 33.1309 148 74C148 114.869 114.869 148 74 148C33.1309 148 0 114.869 0 74C0 51.3485 10.1774 31.0741 26.209 17.5L30 22.1523C15.3167 34.6254 6 53.2247 6 74C6 111.555 36.4446 142 74 142Z"
+                  fill="#F89828" />
+              </svg>
+              <h3 class="circle__number">98%</h3>
+            </div>
+            <p class="item__text">Totally satisfied clients</p>
+          </li>
+          <li class="figures__item">
+            <div class="circle">
+              <svg xmlns="http://www.w3.org/2000/svg" width="148" height="148" viewBox="0 0 148 148" fill="none">
+                <circle opacity="0.3" cx="74" cy="74" r="71" stroke="#F52F6E" stroke-width="6" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="148" height="148" viewBox="0 0 148 148" fill="none">
+                <path
+                  d="M74 142C111.555 142 142 111.555 142 74C142 36.4446 111.555 6 74 6V0C114.869 0 148 33.1309 148 74C148 114.869 114.869 148 74 148C33.1309 148 0 114.869 0 74H6C6 111.555 36.4446 142 74 142Z"
+                  fill="#F52F6E" />
+              </svg>
+              <h3 class="circle__number">20</h3>
+            </div>
+            <p class="item__text">Years of experience</p>
+          </li>
+          <li class="figures__item">
+            <div class="circle">
+              <svg xmlns="http://www.w3.org/2000/svg" width="148" height="148" viewBox="0 0 148 148" fill="none">
+                <circle opacity="0.3" cx="74" cy="74" r="71" stroke="#5A87FC" stroke-width="6" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="148" height="148" viewBox="0 0 148 148" fill="none">
+                <path
+                  d="M74 142C111.555 142 142 111.555 142 74C142 36.4446 111.555 6 74 6V0C114.869 0 148 33.1309 148 74C148 114.869 114.869 148 74 148C33.1309 148 0 114.869 0 74C0 62.1418 2.78922 50.935 7.74738 41L13.2072 43.5C8.59608 52.673 6 63.0333 6 74C6 111.555 36.4446 142 74 142Z"
+                  fill="#5A87FC" />
+              </svg>
+              <h3 class="circle__number">9452</h3>
+            </div>
+            <p class="item__text">Working hours spent</p>
+          </li>
+          <li class="figures__item">
+            <div class="circle">
+              <svg xmlns="http://www.w3.org/2000/svg" width="148" height="148" viewBox="0 0 148 148" fill="none">
+                <circle cx="74" cy="74" r="71" stroke="#03CEA4" stroke-width="6" />
+              </svg>
+              <h3 class="circle__number">100%</h3>
+            </div>
+            <p class="item__text">Succeeded projects</p>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
