add application section styles

--- a/pages/index.html
+++ b/pages/index.html
@@ -571,8 +571,8 @@
               <textarea type="text" name="message" id="application-message-input" placeholder="Your message"></textarea>
             </li>
             <div class="form__checkbox">
+              <input type="checkbox" name="form-checkbox" id="form-checkbox" class="custom-checkbox">
               <label for="form-checkbox">I agree to receive communications from Createx Construction Bureau.</label>
-              <input type="checkbox" name="form-checkbox" id="form-checkbox">
             </div>
           </ul>
           <button class="btn m-btn">send request</button>
