--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header" id="header">
     <div class="header__container container">
       <a href="#" class="logo"><img src="../assets/icons/logo.svg" alt="logo" /></a>
       <nav class="header__nav">
@@ -693,6 +693,16 @@
       </p>
     </div>
   </footer>
+  <div class="scroll-top" id="scroll-top">
+    <p class="scroll-top__text">GO TO TOP</p>
+    <a href="#header" class="btn sm-btn scroll-top__btn">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="9" viewBox="0 0 16 9" fill="none">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M0.292893 8.70711C-0.0976311 8.31658 -0.0976311 7.68342 0.292893 7.29289L7.29289 0.292893C7.68342 -0.0976315 8.31658 -0.0976315 8.70711 0.292893L15.7071 7.29289C16.0976 7.68342 16.0976 8.31658 15.7071 8.70711C15.3166 9.09763 14.6834 9.09763 14.2929 8.70711L8 2.41421L1.70711 8.70711C1.31658 9.09763 0.683417 9.09763 0.292893 8.70711Z"
+          fill="white" />
+      </svg>
+    </a>
+  </div>
 </body>
 <script src="../scripts/index.js"></script>
 
