add services page title section html

--- a/pages/services.html
+++ b/pages/services.html
@@ -36,7 +36,20 @@
             </div>
       </header>
       <main>
-
+            <section class="page-title">
+                  <div class="page-title__container container">
+                        <div class="breadcrumb">
+                              <a href="./index.html">Homepage</a> / Services
+                        </div>
+                        <h1 class="page-title__title title">SERVICES</h1>
+                        <p class="page-title__subtitle subtitle">
+                              If you are looking for a full-service construction company, look to Createx Construction
+                              Bureau. We are doing our best
+                              to be a partner for all of your construction needs.
+                        </p>
+                        <img src="../assets/background/services-page-title-bg.png" alt="background" class="page-title__background">
+                  </div>
+            </section>
       </main>
       <footer class="footer">
             <div class="footer-container container">
