add services list section html

--- a/pages/services.html
+++ b/pages/services.html
@@ -47,9 +47,73 @@
                               Bureau. We are doing our best
                               to be a partner for all of your construction needs.
                         </p>
-                        <img src="../assets/background/services-page-title-bg.png" alt="background" class="page-title__background">
+                        <img src="../assets/background/services-page-title-bg.png" alt="background"
+                              class="page-title__background">
                   </div>
             </section>
+            <sectoin class="services-page">
+                  <div class="services-page__container container">
+                        <ul class="services-page__list">
+                              <li class="services-page__item">
+                                    <img src="../assets/services/constructions.jpg" alt="constructions"
+                                          class="item__preview">
+                                    <div class="item__content">
+                                          <h3 class="item__title title">Construction</h3>
+                                          <p class="item__text text">
+                                                Sapien, feugiat faucibus orci arcu, vulputate. Tristique varius
+                                                consectetur vulputate arcu, scelerisque nisi, nibh. Enim
+                                                semper id sodales ultricies sed ut ut augue. Mattis habitant venenatis,
+                                                gravida posuere massa ac interdum. Eget aliquam
+                                                dignissim ut vestibulum.
+                                          </p>
+                                          <a href="./construction.html" class="btn m-btn outline">Learn more</a>
+                                    </div>
+                              </li>
+                              <li class="services-page__item">
+                                    <img src="../assets/services/project-development.jpg" alt="project-development"
+                                          class="item__preview">
+                                    <div class="item__content">
+                                          <h3 class="item__title title">Project Development</h3>
+                                          <p class="item__text text">
+                                                Volutpat tellus mauris sit sit. Posuere ut sit vestibulum amet viverra
+                                                in. Est nulla lectus purus tincidunt massa
+                                                tortor. Hendrerit vulputate elementum blandit massa vitae amet felis
+                                                eget.
+                                          </p>
+                                          <a href="./construction.html" class="btn m-btn outline">Learn more</a>
+                                    </div>
+                              </li>
+                              <li class="services-page__item">
+                                    <img src="../assets/services/interior-design.jpg" alt="interior-design"
+                                          class="item__preview">
+                                    <div class="item__content">
+                                          <h3 class="item__title title">Interior Design</h3>
+                                          <p class="item__text text">
+                                                Eleifend orci massa et facilisis orci feugiat ac. Congue in ut lacus,
+                                                turpis accumsan gravida. Aliquet mattis dignissim
+                                                massa sociis a, id bibendum. Egestas lorem eros, mi cras amet, vel eget
+                                                molestie. Turpis enim arcu, amet donec massa
+                                                pellentesque nulla duis. Arcu dictum metus sed purus senectus faucibus
+                                                eget elementum pretium.
+                                          </p>
+                                          <a href="./construction.html" class="btn m-btn outline">Learn more</a>
+                                    </div>
+                              </li>
+                              <li class="services-page__item">
+                                    <img src="../assets/services/repairs.jpg" alt="repairs" class="item__preview">
+                                    <div class="item__content">
+                                          <h3 class="item__title title">Repairs</h3>
+                                          <p class="item__text text">
+                                                Facilisis cursus feugiat sit pulvinar amet. Ac facilisi dictum commodo,
+                                                tortor gravida pretium, orci. Nunc sit
+                                                sollicitudin id egestas mattis. Turpis viverra nec urna ultrices urna.
+                                          </p>
+                                          <a href="./construction.html" class="btn m-btn outline">Learn more</a>
+                                    </div>
+                              </li>
+                        </ul>
+                  </div>
+            </sectoin>
       </main>
       <footer class="footer">
             <div class="footer-container container">
