add services page list styles

--- a/pages/services.html
+++ b/pages/services.html
@@ -11,14 +11,14 @@
 <body>
       <header class="header" id="header">
             <div class="header__container container">
-                  <a href="#" class="logo"><img src="../assets/icons/logo.svg" alt="logo" /></a>
+                  <a href="./index.html" class="logo"><img src="../assets/icons/logo.svg" alt="logo" /></a>
                   <nav class="header__nav">
                         <ul class="nav__list">
-                              <li class="nav__item"><a class="nav__link" href="./AboutPage.html">About Us</a></li>
-                              <li class="nav__item"><a class="nav__link" href="./ServicesPage.html">Services</a></li>
-                              <li class="nav__item"><a class="nav__link" href="./WorkPage.html">Work</a></li>
-                              <li class="nav__item"><a class="nav__link" href="./NewsPage.html">News</a></li>
-                              <li class="nav__item"><a class="nav__link" href="./ContactsPage.html">Contacts</a></li>
+                              <li class="nav__item"><a class="nav__link" href="./about.html">About Us</a></li>
+                              <li class="nav__item"><a class="nav__link" href="./services.html">Services</a></li>
+                              <li class="nav__item"><a class="nav__link" href="./work.html">Work</a></li>
+                              <li class="nav__item"><a class="nav__link" href="./news.html">News</a></li>
+                              <li class="nav__item"><a class="nav__link" href="./contacts.html">Contacts</a></li>
                         </ul>
                   </nav>
                   <div class="header-contacts">
