--- a/pages/index.html
+++ b/pages/index.html
@@ -9,32 +9,32 @@
 </head>
 
 <body>
-  <header class="header" id="header">
-    <div class="header__container container">
-      <a href="#" class="logo"><img src="../assets/icons/logo.svg" alt="logo" /></a>
-      <nav class="header__nav">
-        <ul class="nav__list">
-          <li class="nav__item"><a class="nav__link" href="./AboutPage.html">About Us</a></li>
-          <li class="nav__item"><a class="nav__link" href="./ServicesPage.html">Services</a></li>
-          <li class="nav__item"><a class="nav__link" href="./WorkPage.html">Work</a></li>
-          <li class="nav__item"><a class="nav__link" href="./NewsPage.html">News</a></li>
-          <li class="nav__item"><a class="nav__link" href="./ContactsPage.html">Contacts</a></li>
-        </ul>
-      </nav>
-      <div class="header-contacts">
-        <a href="tel:4055550128" class="header-contacts__link link-call">
-          <img src="../assets/icons/communications/iPhone-colored.svg" alt="phone">
-          <span class="link-call__title">Call us</span>
-          <span class="link-call__tel">(405) 555-0128</span>
-        </a>
-        <a href="mailto:hello@createx.com" class="header-contacts__link link-mail">
-          <img src="../assets/icons/communications/Chat-colored.svg" alt="phone">
-          <span class="link-mail__title">Talk to us</span>
-          <span class="link-mail__adr">hello@createx.com</span>
-        </a>
-      </div>
-    </div>
-  </header>
+      <header class="header" id="header">
+        <div class="header__container container">
+          <a href="./index.html" class="logo"><img src="../assets/icons/logo.svg" alt="logo" /></a>
+          <nav class="header__nav">
+            <ul class="nav__list">
+              <li class="nav__item"><a class="nav__link" href="./about.html">About Us</a></li>
+              <li class="nav__item"><a class="nav__link" href="./services.html">Services</a></li>
+              <li class="nav__item"><a class="nav__link" href="./work.html">Work</a></li>
+              <li class="nav__item"><a class="nav__link" href="./news.html">News</a></li>
+              <li class="nav__item"><a class="nav__link" href="./contacts.html">Contacts</a></li>
+            </ul>
+          </nav>
+          <div class="header-contacts">
+            <a href="tel:4055550128" class="header-contacts__link link-call">
+              <img src="../assets/icons/communications/iPhone-colored.svg" alt="phone">
+              <span class="link-call__title">Call us</span>
+              <span class="link-call__tel">(405) 555-0128</span>
+            </a>
+            <a href="mailto:hello@createx.com" class="header-contacts__link link-mail">
+              <img src="../assets/icons/communications/Chat-colored.svg" alt="phone">
+              <span class="link-mail__title">Talk to us</span>
+              <span class="link-mail__adr">hello@createx.com</span>
+            </a>
+          </div>
+        </div>
+      </header>
   <main>
     <section class="hero">
       <div class="slider__btn disabled" id="slide-hero-to-left">
