add application on services page

--- a/pages/services.html
+++ b/pages/services.html
@@ -114,6 +114,43 @@
                         </ul>
                   </div>
             </sectoin>
+            <section class="application">
+                  <div class="application-container container">
+                        <form action="" class="aplication__form">
+                              <h3 class="form__title title">A quick way to discuss details</h3>
+                              <ul class="form__inputs">
+                                    <li class="form__input input-block">
+                                          <label for="name">Name*</label>
+                                          <input type="text" name="name" id="application-name-input"
+                                                placeholder="Your name">
+                                    </li>
+                                    <li class="form__input input-block">
+                                          <label for="phone">Phone*</label>
+                                          <input type="text" name="phone" id="application-phone-input"
+                                                placeholder="Your phone number">
+                                    </li>
+                                    <li class="form__input input-block">
+                                          <label for="phone">Email</label>
+                                          <input type="text" name="phone" id="application-phone-input"
+                                                placeholder="Your working email">
+                                    </li>
+                                    <li class="form__input input-block">
+                                          <label for="message">Message*</label>
+                                          <textarea type="text" name="message" id="application-message-input"
+                                                placeholder="Your message"></textarea>
+                                    </li>
+                                    <div class="form__checkbox">
+                                          <input type="checkbox" name="form-checkbox" id="form-checkbox"
+                                                class="custom-checkbox">
+                                          <label for="form-checkbox">I agree to receive communications from Createx
+                                                Construction
+                                                Bureau.</label>
+                                    </div>
+                              </ul>
+                              <button class="btn m-btn">send request</button>
+                        </form>
+                  </div>
+            </section>
       </main>
       <footer class="footer">
             <div class="footer-container container">
